# practica-calificada-3b-Marcuss17

./: .main.cpp.swp  CMakeLists.txt  allIncludes.h  main.cpp  parseVector.cpp  parseVector.h  readAndWrite.cpp  readAndWrite.h  rectangulos.h  rectangulos.out  set1.out  set2.in  set2.out  setOut.cpp  setOut.h  vectorOut.cpp  vectorOut.h
